# resume.md

./: .gitlab-ci.yml  LICENSE  Makefile  README.md  build.sh  make_resume.py  preamble.html  pyproject.toml  requirements.txt  resume.css  resume.html  resume.md  resume.py  resume_with_avatar.py
.github/workflows/: build.yml  release.yml
docs/: index.html
resume/: resume.py
